--- a/src/app/admin-template-component/admin-template-component.html
+++ b/src/app/admin-template-component/admin-template-component.html
@@ -5,8 +5,8 @@
     <span style="flex: auto;"></span>
     <button mat-button routerLink="admin/home">Home</button>
     <button mat-button routerLink="admin/profile">Perfil</button>
-
-    <button mat-button [matMenuTriggerFor]="importMenu">
+    <!--Solo los usuarios ADMIN acceden a la opcion de Importar menu-->
+    <button mat-button *ngIf="auth.roles.includes('ADMIN')" [matMenuTriggerFor]="importMenu">
         <mat-icon iconPositionEnd>keyboard_arrow_down</mat-icon>
         Importar
     </button>
@@ -15,7 +15,7 @@
         <button mat-menu-item routerLink="admin/loadPagos">Cargar Pagos</button>
     </mat-menu>
     <!-- Mostrar el nombre del usuario autenticado -->
-    <button mat-button *If="auth.isAuthenticated">
+    <button mat-button *ngIf="auth.isAuthenticated">
         {{ auth.username }}
     </button>
     <button mat-raised-button color="accent" (click)="logout()">Salir</button>
